// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaletteTrigger props.trigger should accept a custom child component 1`] = `
<PaletteTrigger
  theme={
    Object {
      "trigger": "ui button",
    }
  }
  trigger={<MyButton />}
>
  <CustomTriggerComponent
    theme="ui button"
    trigger={<MyButton />}
  >
    <div
      className="ui button"
      role="button"
      tabIndex={0}
    >
      <MyButton>
        <b>
          foo
        </b>
      </MyButton>
    </div>
  </CustomTriggerComponent>
</PaletteTrigger>
`;

exports[`PaletteTrigger props.trigger should accept a custom text string 1`] = `
<PaletteTrigger
  theme={
    Object {
      "trigger": "ui button",
    }
  }
  trigger="foo"
>
  <CustomTriggerComponent
    theme="ui button"
    trigger="foo"
  >
    <div
      className="ui button"
      role="button"
      tabIndex={0}
    >
      foo
    </div>
  </CustomTriggerComponent>
</PaletteTrigger>
`;
